# pyeffort

./: CovaPTcov_gaussian_AbacusFid_z0.8_n5e-4.npy  README.md  chains.ipynb  masked_cov_20.npy  pyproject.toml
pyeffort/: __init__.py  juliapkg.json  pyeffort.py
trained_hanyu_10000/: 11_0_0.sh  11_0_1.sh  11_0_2.sh  11_0_3.sh  11_2_0.sh  11_2_1.sh  11_2_2.sh  11_2_3.sh  ct_0_0.sh  ct_0_1.sh  ct_0_2.sh  ct_0_3.sh  ct_2_0.sh  ct_2_1.sh  ct_2_2.sh  ct_2_3.sh  inMinMax_lcdm_l_2_sky_2.npy  job_11_0_0.err  job_11_0_0.out  job_11_0_0.sh  job_11_0_1.err  job_11_0_1.out  job_11_0_1.sh  job_11_0_2.err  job_11_0_2.out  job_11_0_2.sh  job_11_0_3.err  job_11_0_3.out  job_11_0_3.sh  job_11_2_0.err  job_11_2_0.out  job_11_2_0.sh  job_11_2_1.err  job_11_2_1.out  job_11_2_1.sh  job_11_2_2.err  job_11_2_2.out  job_11_2_2.sh  job_11_2_3.err  job_11_2_3.out  (+105 more)
